addded some buttons changed text

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class='dottedline'>
             <h1>Next Event</h1>
         </div>
-        <div class="center">Get the honest insights @ SXSW 2014<br/><a href="https://www.facebook.com/events/423583667775920/"><img src="images/facebook_button.png" /></a></div>
+        <div class="center">I'm superexcited to see this on stage<br/><a href="https://www.facebook.com/events/423583667775920/"><img src="images/facebook_button.png" /></a></div>
         <div class="center">You're a startup or investor? Join the dating game on stage!<br/>
         <script type="text/javascript">var submitted=false;</script>
         <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"     
@@ -135,9 +135,33 @@
             </li> -->
           </ul>
         </p>
+        <div class="center">You're a startup or investor? Join the dating game on stage!<br/>
+        <script type="text/javascript">var submitted=false;</script>
+        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"     
+        onload="if(submitted) {window.location='http://interactivedatinggame.com';}"></iframe>
+        <form action="https://docs.google.com/a/railslove.com/forms/d/1XKWzrzyUJSZYCvK8hLiJ6PaIcNSdyLff0rXgUdKBI1I/formResponse" method="post" target="hidden_iframe" 
+        onsubmit="submitted=true;">
+        <div class="ss-form-question errorbox-good">
+        <div dir="ltr" class="ss-item ss-item-required ss-text"><div class="ss-form-entry"><label aria-hidden="true" class="ss-q-item-label" for="entry_1480900301"><div class="ss-q-title">email address
+        <label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
+        <span class="ss-required-asterisk">*</span></div>
+        <div class="ss-q-help ss-secondary-text" dir="ltr"></div></label>
+        <input type="text" name="entry.1480900301" value="" class="ss-q-short" id="entry_1480900301" dir="auto" aria-label="email address  " aria-required="true" required="" title="">
+        <div class="error-message"></div>
+        </div></div></div>
+        <input type="hidden" name="draftResponse" value="[,,&quot;-8748123357358389066&quot;]
+        ">
+        <input type="hidden" name="pageHistory" value="0">
+        <input type="hidden" name="fromEmail" value="false">
+
+        <input type="hidden" name="fbzx" value="-8748123357358389066">
+
+        <div class="ss-item ss-navigate">
+        <input type="submit" name="submit" value="Submit" id="ss-submit">
+        </div></ol></form></div>        
         <div class='dottedline'><h1>Prizes</h1></div>
         <p>
-          All participants will get the chance to present themselves in front of over 200 Techies, Founders, VC's! If you couldn't find your partner on the stage, you will find her or him in the crowd!<br/>
+          All participants will get the chance to present themselves in front of over 200 Techies, Founders, VCs! If you couldn't find your partner on the stage, you will find her or him in the crowd!<br/>
           The winner of each round will win a "candle-light" dinner with the favored one in a romantic location in Cologne.
         </p>                 
         <div class='dottedline'><h1>Your Hosts</h1></div>
@@ -182,7 +206,7 @@
           </ul>
         </p>   
         <div class='dottedline'></div>
-        <div class="center">Get the honest insights @ SXSW 2014<br/><a href="https://www.facebook.com/events/423583667775920/"><img src="images/facebook_button.png" /></a></div>
+        <div class="center">This is the best thing since "The Hoff" brought down the wall. I'm in!<br/><a href="https://www.facebook.com/events/423583667775920/"><img src="images/facebook_button.png" /></a></div>
         <div class="center">You're a startup or investor? Join the dating game on stage!<br/>
         <script type="text/javascript">var submitted=false;</script>
         <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"     
@@ -235,7 +259,7 @@
           <iframe width="380px" height="315" src="http://www.youtube.com/embed/J2NkjOs_UMg" frameborder="0" allowfullscreen></iframe>
         </p>
         <div class='dottedline'></div>
-        <div class="center">Get the honest insights @ SXSW 2014<br/><a href="https://www.facebook.com/events/423583667775920/"><img src="images/facebook_button.png" /></a></div>
+        <div class="center">Get honest insights @ SXSW 2014<br/><a href="https://www.facebook.com/events/423583667775920/"><img src="images/facebook_button.png" /></a></div>
         <div class="center">You're a startup or investor? Join the dating game on stage!<br/>
         <script type="text/javascript">var submitted=false;</script>
         <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"     
