--- a/index.html
+++ b/index.html
@@ -49,11 +49,14 @@
     <div class='inhalt'>
       <section class='about' id='about'>
         <div class="dottedline"><h1>About</h1></div>
-        <p>
-          An event like German beer: easy to relax - easy to make new contacts - and the best method to get honest insights<br/>
-          Hand-picked startups meet high-class investors in the most candid way: Questions never asked before reveal insights never given before. Who’s the perfect match for you?<br/>
-          Join our event series that has already made dreams come true for so many founders and investors: Matchmaking with inspiring people in a creative and fun environment. An insane mixture of German efficiency and atypical German fun.
-        </p>
+        <p>An event like German beer:</p>
+        <ul>
+          <li>easy to relax</li>
+          <li>easy to make new contacts</li>
+          <li>and the best method to get honest insights</li>
+        </ul>
+        <p>Hand-picked startups meet high-class investors in the most candid way: Questions never asked before reveal insights never given before. Who’s the perfect match for you?<br/>
+        Join our event series that has already made dreams come true for so many founders and investors: Matchmaking with inspiring people in a creative and fun environment. An insane mixture of German efficiency and atypical German fun.</p>
       </section>      
       <section class='nextevent' id='nextevent'>
         <div class='dottedline'>
