added responsive stuff

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <div class='navigation'>
           <div class='left'></div>
           <div class='center'>
+            <div class='opener'></div>
             <ul class='nav'>
               <li>
                 <a href='#about'>About</a>
@@ -42,8 +43,7 @@
           </div>
           <div class='right'></div>
         </div>
-        <div class="pfeil"><a href="#dates"><img src="images/pfeil.png" /></a>
-        </div>
+        <a class="pfeil" href="https://www.facebook.com/events/1419493211626409/"><img src="images/stoerer.png" /></a>
       </div>
     </header>
     <div class='inhalt'>
@@ -62,7 +62,7 @@
         <div class='dottedline'>
             <h1>Next Event</h1>
         </div>
-        <div class="center">I'm superexcited to see this on stage<br/><a href="https://www.facebook.com/events/423583667775920/"><img src="images/facebook_button.png" /></a></div>
+        <div class="center">I'm superexcited to see this on stage<br/><a href="https://www.facebook.com/events/1419493211626409/"><img src="images/facebook_button.png" /></a></div>
         <div class="center">You're a startup or investor? Join the dating game on stage!<br/>
         <script type="text/javascript">var submitted=false;</script>
         <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"     
@@ -209,7 +209,7 @@
           </ul>
         </p>   
         <div class='dottedline'></div>
-        <div class="center">This is the best thing since "The Hoff" brought down the wall. I'm in!<br/><a href="https://www.facebook.com/events/423583667775920/"><img src="images/facebook_button.png" /></a></div>
+        <div class="center">This is the best thing since "The Hoff" brought down the wall. I'm in!<br/><a href="https://www.facebook.com/events/1419493211626409/"><img src="images/facebook_button.png" /></a></div>
         <div class="center">You're a startup or investor? Join the dating game on stage!<br/>
         <script type="text/javascript">var submitted=false;</script>
         <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"     
@@ -262,7 +262,7 @@
           <iframe width="380px" height="315" src="http://www.youtube.com/embed/J2NkjOs_UMg" frameborder="0" allowfullscreen></iframe>
         </p>
         <div class='dottedline'></div>
-        <div class="center">Get honest insights @ SXSW 2014<br/><a href="https://www.facebook.com/events/423583667775920/"><img src="images/facebook_button.png" /></a></div>
+        <div class="center">Get honest insights @ SXSW 2014<br/><a href="https://www.facebook.com/events/1419493211626409/"><img src="images/facebook_button.png" /></a></div>
         <div class="center">You're a startup or investor? Join the dating game on stage!<br/>
         <script type="text/javascript">var submitted=false;</script>
         <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"     
