--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
         </ul>
         <p>Hand-picked startups meet high-class investors in the most candid way: Questions never asked before reveal insights never given before. Who’s the perfect match for you?<br/>
         Join our event series that has already made dreams come true for so many founders and investors: Matchmaking with inspiring people in a creative and fun environment. An insane mixture of German efficiency and atypical German fun.</p>
+        <img width="380" alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-dating-game-7.jpg'>          
+        <img width="380" alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-dating-game-2.jpg'>
       </section>      
       <section class='nextevent' id='nextevent'>
         <div class='dottedline'>
