--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
   </head>
   <body>
+    <div class='banner'>
+      <a href="https://www.facebook.com/events/1419493211626409/" target='_blank'>
+        <img src='./images/banner.png'/>
+      <a/>
+    </div>
     <header>
       <div id='particles_wrapper'>
         <div id='particles'></div>
@@ -43,7 +48,6 @@
           </div>
           <div class='right'></div>
         </div>
-        <a class="pfeil" href="https://www.facebook.com/events/1419493211626409/"><img src="images/stoerer.png" /></a>
       </div>
     </header>
     <div class='inhalt'>
@@ -57,9 +61,9 @@
         </ul>
         <p>Hand-picked startups meet high-class investors in the most candid way: Questions never asked before reveal insights never given before. Who’s the perfect match for you?<br/>
         Join our event series that has already made dreams come true for so many founders and investors: Matchmaking with inspiring people in a creative and fun environment. An insane mixture of German efficiency and atypical German fun.</p>
-        <img width="380" alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-dating-game-7.jpg'>          
+        <img width="380" alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-dating-game-7.jpg'>
         <img width="380" alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-dating-game-2.jpg'>
-      </section>      
+      </section>
       <section class='nextevent' id='nextevent'>
         <div class='dottedline'>
             <h1>Next Event</h1>
@@ -67,9 +71,9 @@
         <div class="center">I'm superexcited to see this on stage<br/><a href="https://www.facebook.com/events/1419493211626409/"><img src="images/facebook_button.png" /></a></div>
         <div class="center">You're a startup or investor? Join the dating game on stage!<br/>
         <script type="text/javascript">var submitted=false;</script>
-        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"     
+        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"
         onload="if(submitted) {window.location='http://interactivedatinggame.com';}"></iframe>
-        <form action="https://docs.google.com/a/railslove.com/forms/d/1XKWzrzyUJSZYCvK8hLiJ6PaIcNSdyLff0rXgUdKBI1I/formResponse" method="post" target="hidden_iframe" 
+        <form class='form' action="https://docs.google.com/a/railslove.com/forms/d/1XKWzrzyUJSZYCvK8hLiJ6PaIcNSdyLff0rXgUdKBI1I/formResponse" method="post" target="hidden_iframe"
         onsubmit="submitted=true;">
         <div class="ss-form-question errorbox-good">
         <div dir="ltr" class="ss-item ss-item-required ss-text"><div class="ss-form-entry"><label aria-hidden="true" class="ss-q-item-label" for="entry_1480900301"><div class="ss-q-title">email address
@@ -99,7 +103,7 @@
                     <p class='dotline'></p>
                 </div>
             </div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13784.865931480213!2d-97.73696348840147!3d30.259412486001114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644b5abd5c44351%3A0x8a3cc2c15c63bf36!2sLucille+%2F+77+Rainey+Street+++Austin!5e0!3m2!1sen!2sde!4v1391512192554" width="100%" height="450" frameborder="0" style="border:0"></iframe>        
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13784.865931480213!2d-97.73696348840147!3d30.259412486001114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644b5abd5c44351%3A0x8a3cc2c15c63bf36!2sLucille+%2F+77+Rainey+Street+++Austin!5e0!3m2!1sen!2sde!4v1391512192554" width="100%" height="450" frameborder="0" style="border:0"></iframe>
           </div>
       </section>
       <section class='talks' id='talks'>
@@ -142,9 +146,9 @@
         </p>
         <div class="center">You're a startup or investor? Join the dating game on stage!<br/>
         <script type="text/javascript">var submitted=false;</script>
-        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"     
+        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"
         onload="if(submitted) {window.location='http://interactivedatinggame.com';}"></iframe>
-        <form action="https://docs.google.com/a/railslove.com/forms/d/1XKWzrzyUJSZYCvK8hLiJ6PaIcNSdyLff0rXgUdKBI1I/formResponse" method="post" target="hidden_iframe" 
+        <form class='form' action="https://docs.google.com/a/railslove.com/forms/d/1XKWzrzyUJSZYCvK8hLiJ6PaIcNSdyLff0rXgUdKBI1I/formResponse" method="post" target="hidden_iframe"
         onsubmit="submitted=true;">
         <div class="ss-form-question errorbox-good">
         <div dir="ltr" class="ss-item ss-item-required ss-text"><div class="ss-form-entry"><label aria-hidden="true" class="ss-q-item-label" for="entry_1480900301"><div class="ss-q-title">email address
@@ -163,12 +167,12 @@
 
         <div class="ss-item ss-navigate">
         <input type="submit" name="submit" value="Submit" id="ss-submit">
-        </div></ol></form></div>        
+        </div></ol></form></div>
         <div class='dottedline'><h1>Prizes</h1></div>
         <p>
           All participants will get the chance to present themselves in front of over 200 Techies, Founders, VCs! If you couldn't find your partner on the stage, you will find her or him in the crowd!<br/>
           The winner of each round will win a "candle-light" dinner with the favored one in a romantic location in Cologne.
-        </p>                 
+        </p>
         <div class='dottedline'><h1>Your Hosts</h1></div>
         <p>
           <ul class='talks'>
@@ -209,14 +213,14 @@
               <div class='topic'>Doubble Shieeeet</div>
             </li>
           </ul>
-        </p>   
+        </p>
         <div class='dottedline'></div>
         <div class="center">This is the best thing since "The Hoff" brought down the wall. I'm in!<br/><a href="https://www.facebook.com/events/1419493211626409/"><img src="images/facebook_button.png" /></a></div>
         <div class="center">You're a startup or investor? Join the dating game on stage!<br/>
         <script type="text/javascript">var submitted=false;</script>
-        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"     
+        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"
         onload="if(submitted) {window.location='http://interactivedatinggame.com';}"></iframe>
-        <form action="https://docs.google.com/a/railslove.com/forms/d/1XKWzrzyUJSZYCvK8hLiJ6PaIcNSdyLff0rXgUdKBI1I/formResponse" method="post" target="hidden_iframe" 
+        <form class='form' action="https://docs.google.com/a/railslove.com/forms/d/1XKWzrzyUJSZYCvK8hLiJ6PaIcNSdyLff0rXgUdKBI1I/formResponse" method="post" target="hidden_iframe"
         onsubmit="submitted=true;">
         <div class="ss-form-question errorbox-good">
         <div dir="ltr" class="ss-item ss-item-required ss-text"><div class="ss-form-entry"><label aria-hidden="true" class="ss-q-item-label" for="entry_1480900301"><div class="ss-q-title">email address
@@ -252,14 +256,14 @@
         <p>
           <iframe width="380" height="315" src="http://www.youtube.com/embed/tS_2sAGYI-Q" frameborder="0" allowfullscreen></iframe>
           <iframe width="380" height="315" src="http://www.youtube.com/embed/snfx-F24gnQ" frameborder="0" allowfullscreen></iframe>
-          <img width="380" alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-dating-game-7.jpg'>          
+          <img width="380" alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-dating-game-7.jpg'>
           <img width="380" alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-dating-game-2.jpg'>
           <img width="380" alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-dating-game-4.jpg'>
           <img width="380" alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-dating-game-5.jpg'>
           <img width="380" alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-dating-game-8.jpg'>
-          <img width="380" alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-dating-game-10.jpg'>          
-          <img width="380" alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-dating-game-11.jpg'>          
-          <img width="380" alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-dating-game-13.jpg'>                    
+          <img width="380" alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-dating-game-10.jpg'>
+          <img width="380" alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-dating-game-11.jpg'>
+          <img width="380" alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-dating-game-13.jpg'>
           <iframe width="380px" height="315" src="http://www.youtube.com/embed/wObJGrpk53s" frameborder="0" allowfullscreen></iframe>
           <iframe width="380px" height="315" src="http://www.youtube.com/embed/J2NkjOs_UMg" frameborder="0" allowfullscreen></iframe>
         </p>
@@ -267,9 +271,9 @@
         <div class="center">Get honest insights @ SXSW 2014<br/><a href="https://www.facebook.com/events/1419493211626409/"><img src="images/facebook_button.png" /></a></div>
         <div class="center">You're a startup or investor? Join the dating game on stage!<br/>
         <script type="text/javascript">var submitted=false;</script>
-        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"     
+        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"
         onload="if(submitted) {window.location='http://interactivedatinggame.com';}"></iframe>
-        <form action="https://docs.google.com/a/railslove.com/forms/d/1XKWzrzyUJSZYCvK8hLiJ6PaIcNSdyLff0rXgUdKBI1I/formResponse" method="post" target="hidden_iframe" 
+        <form class='form' action="https://docs.google.com/a/railslove.com/forms/d/1XKWzrzyUJSZYCvK8hLiJ6PaIcNSdyLff0rXgUdKBI1I/formResponse" method="post" target="hidden_iframe"
         onsubmit="submitted=true;">
         <div class="ss-form-question errorbox-good">
         <div dir="ltr" class="ss-item ss-item-required ss-text"><div class="ss-form-entry"><label aria-hidden="true" class="ss-q-item-label" for="entry_1480900301"><div class="ss-q-title">email address
@@ -288,7 +292,7 @@
 
         <div class="ss-item ss-navigate">
         <input type="submit" name="submit" value="Submit" id="ss-submit">
-        </div></ol></form></div>        
+        </div></ol></form></div>
         <div class='dottedline'><h1>Past Candidates</h1></div>
         <p>
           <ul class='talks'>
@@ -416,13 +420,13 @@
             </li>
  -->          </ul>
         </p>
-      </section>      
+      </section>
 <!--       <section class='host' id='host'>
         <div class='dottedline'><h1>Become a host and organize your own dating game</h1></div>
         <p>
           Get in touch with <a href='mailto:jan@railslove.com' target='_blank'>Jack of all trades</a>
         </p>
-      </section>  -->     
+      </section>  -->
       <section class='copyright'>
         <div class='dottedline'></div>
         <a href='mailto:jan@interactive-cologne.com' target='_blank'>Questions?</a><br/><br/>
@@ -431,7 +435,7 @@
 des Landes Nordrhein-Westfalen</a><br /><br/>
         Copyright (c) 2014 by <a href='http://jankus.me' target='_blank'>Jack of all trades</a><br /><br/>
       </section>
-     
+
     </div>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
