added first candidates

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <div class='inhalt'>
       <section class='about' id='about'>
         <div class="dottedline"><h1>About</h1></div>
+        <p>The government of Germany´s biggest state, located at the heart of Europe, North Rhine-Westphalia (NRW), fosters creative companies and entrepreneurs. A delegation of the government, selected, established entrepreneurs and investors will give you happily a warm welcome.</p>
         <p>An event like German beer:</p>
         <ul>
           <li>easy to relax</li>
@@ -108,6 +109,47 @@
       </section>
       <section class='talks' id='talks'>
         <div class='dottedline'><h1>Candidates</h1></div>
+        <h2>Round 1</h2>
+        <p>
+          <ul class='talks'>
+            <li>
+              <div class='name'>The Investor</div>
+              <div class='avatar' style="background-image: url('images/rudy.jpg')"></div>
+              <div class='name'>Rudy Garza - <a href="http://www.g51.com/">g51</a></div>              
+              <div class='handle'>
+                <a href='http://twitter.com/TexasSuperAngel' target='_blank'>@TexasSuperAngel</a>
+              </div>              
+            </li>
+            <li>
+              <div class='name'>The Crazy Solo Founder</div>
+              <div class='avatar' style="background-image: url('images/mike.jpg')"></div>
+              <div class='name'>Mike Holp</div>              
+              <div class='handle'>
+                <a href='http://twitter.com/TexasSuperAngel' target='_blank'>@MikeHolp</a>
+              </div>              
+            </li>
+            <li>
+              <div class='name'>Startup</div>
+              <div class='avatar' style="background-image: url('images/startup.gif')"></div>
+              <div class='name'>Name</div>              
+              <div class='handle'>
+                <a href='http://twitter.com/startup' target='_blank'>@startup</a>
+              </div>              
+            </li>
+            </li>
+            <li>
+              <div class='name'>Startup</div>
+              <div class='avatar' style="background-image: url('images/startup.gif')"></div>
+              <div class='name'>Name</div>              
+              <div class='handle'>
+                <a href='http://twitter.com/startup' target='_blank'>@startup</a>
+              </div>              
+            </li>
+          </ul>
+        </p>
+        <p><strong>The Investor: Rudy Garza</strong> - As founder and managing general partner of G-51, Rudy focuses on the development of all portfolio companies, syndication partnerships and deal flow. <a href="http://www.g51.com/rudy-garza.html">Read more about Rudy</a></p>
+        <p><strong>The Crazy Solo Founder</strong> - <a href="http://www.dwmcapp.com/">"Dude where is my car?"</a> with Mike Holp. Their value proposition is "Never lose your car again.</p>        
+        <h2>Round 2</h2>        
         <p>
           <ul class='talks'>
             <li>
@@ -126,22 +168,6 @@
               <div class='name'>Startup</div>
               <div class='avatar' style="background-image: url('images/startup.gif')"></div>
             </li>
-<!--             <li>
-              <div class='name'>An awesome investor</div>
-              <div class='avatar' style="background-image: url('images/investor.gif')"></div>
-            </li>
-            <li>
-              <div class='name'>Startup</div>
-              <div class='avatar' style="background-image: url('images/startup.gif')"></div>
-            </li>
-            <li>
-              <div class='name'>Startup</div>
-              <div class='avatar' style="background-image: url('images/startup.gif')"></div>
-            </li>
-            <li>
-              <div class='name'>Startup</div>
-              <div class='avatar' style="background-image: url('images/startup.gif')"></div>
-            </li> -->
           </ul>
         </p>
         <div class="center">You're a startup or investor? Join the dating game on stage!<br/>
