some styling for canidates
Signed-off-by: Stephan Pavlovic <stephan@railslove.com>

--- a/index.html
+++ b/index.html
@@ -115,41 +115,41 @@
             <li>
               <div class='name'>The Investor</div>
               <div class='avatar' style="background-image: url('images/rudy.jpg')"></div>
-              <div class='name'>Rudy Garza - <a href="http://www.g51.com/">g51</a></div>              
+              <div class='name'>Rudy Garza - <a href="http://www.g51.com/">g51</a></div>
               <div class='handle'>
                 <a href='http://twitter.com/TexasSuperAngel' target='_blank'>@TexasSuperAngel</a>
-              </div>              
+              </div>
             </li>
             <li>
               <div class='name'>The Crazy Solo Founder</div>
               <div class='avatar' style="background-image: url('images/mike.jpg')"></div>
-              <div class='name'>Mike Holp</div>              
+              <div class='name'>Mike Holp</div>
               <div class='handle'>
                 <a href='http://twitter.com/TexasSuperAngel' target='_blank'>@MikeHolp</a>
-              </div>              
+              </div>
             </li>
             <li>
               <div class='name'>Startup</div>
               <div class='avatar' style="background-image: url('images/startup.gif')"></div>
-              <div class='name'>Name</div>              
+              <div class='name'>Name</div>
               <div class='handle'>
                 <a href='http://twitter.com/startup' target='_blank'>@startup</a>
-              </div>              
+              </div>
             </li>
             </li>
             <li>
               <div class='name'>Startup</div>
               <div class='avatar' style="background-image: url('images/startup.gif')"></div>
-              <div class='name'>Name</div>              
+              <div class='name'>Name</div>
               <div class='handle'>
                 <a href='http://twitter.com/startup' target='_blank'>@startup</a>
-              </div>              
+              </div>
             </li>
           </ul>
         </p>
-        <p><strong>The Investor: Rudy Garza</strong> - As founder and managing general partner of G-51, Rudy focuses on the development of all portfolio companies, syndication partnerships and deal flow. <a href="http://www.g51.com/rudy-garza.html">Read more about Rudy</a></p>
-        <p><strong>The Crazy Solo Founder</strong> - <a href="http://www.dwmcapp.com/">"Dude where is my car?"</a> with Mike Holp. Their value proposition is "Never lose your car again.</p>        
-        <h2>Round 2</h2>        
+        <p><strong>The Investor: Rudy Garza</strong> As founder and managing general partner of G-51, Rudy focuses on the development of all portfolio companies, syndication partnerships and deal flow. <a href="http://www.g51.com/rudy-garza.html">Read more about Rudy</a></p>
+        <p><strong>The Crazy Solo Founder</strong> <a href="http://www.dwmcapp.com/">"Dude where is my car?"</a> with Mike Holp. Their value proposition is "Never lose your car again.</p>
+        <h2>Round 2</h2>
         <p>
           <ul class='talks'>
             <li>
