--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
             </li>
           </ul>
         </p>
-        <p><strong>The Investor: Rudy Garza</strong> As founder and managing general partner of G-51, Rudy focuses on the development of all portfolio companies, syndication partnerships and deal flow. <a href="http://www.g51.com/rudy-garza.html">Read more about Rudy</a></p>
-        <p><strong>The Crazy Solo Founder</strong> <a href="http://www.dwmcapp.com/">"Dude where is my car?"</a> with Mike Holp. Their value proposition is "Never lose your car again.</p>
+        <p><strong>The Investor: Rudy Garza</strong> As founder and managing general partner of G-51, Rudy focuses on the development of all portfolio companies, syndication partnerships and deal flow. <a href="http://www.g51.com/rudy-garza.html">Read more about Rudy:</a></p>
+        <p><strong>The Crazy Solo Founder: Mike Holp</strong> <a href="http://www.dwmcapp.com/">"Dude where is my car?"</a> with Mike Holp. Their value proposition is "Never lose your car again.</p>
         <h2>Round 2</h2>
         <p>
           <ul class='talks'>
