--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class='inhalt'>
       <section class='about' id='about'>
         <div class="dottedline"><h1>About</h1></div>
-        <p>The government of Germany´s biggest state, located at the heart of Europe, North Rhine-Westphalia (NRW), fosters creative companies and entrepreneurs. A delegation of the government, selected, established entrepreneurs, investors and digital and media professionals will give you happily a warm welcome. Find out more about the delecation participants on <a href="http://www.sxsw-nrw.de">http://www.sxsw-nrw.de</a></p>
+        <p>The government of Germany´s biggest state, located at the heart of Europe, North Rhine-Westphalia (NRW), fosters creative companies and entrepreneurs. A delegation of the government, selected, established entrepreneurs, investors and media professionals will give you happily a warm welcome. Find out more about the delegation participants on <a href="http://www.sxsw-nrw.de">http://www.sxsw-nrw.de</a></p>
         <p>An event like German beer:</p>
         <ul>
           <li>easy to relax</li>
