--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13784.865931480213!2d-97.73696348840147!3d30.259412486001114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644b5abd5c44351%3A0x8a3cc2c15c63bf36!2sLucille+%2F+77+Rainey+Street+++Austin!5e0!3m2!1sen!2sde!4v1391512192554" width="100%" height="450" frameborder="0" style="border:0"></iframe>
           </div>
       </section>
-      <section class='talks' id='talks'>
+      <section class='talks' id='candidates'>
         <div class='dottedline'><h1>Candidates</h1></div>
         <h2>Round 1</h2>
         <p>
