--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
               </div>
             </li>
             <li>
-              <div class='name'>Startup</div>
-              <div class='avatar' style="background-image: url('images/startup.gif')"></div>
-              <div class='name'>Name</div>
+              <div class='name'>The FanCaptain</div>
+              <div class='avatar' style="background-image: url('images/tobias.jpg')"></div>
+              <div class='name'>Tobias Schiwek</div>
               <div class='handle'>
-                <a href='http://twitter.com/startup' target='_blank'>@startup</a>
+                <a href='http://twitter.com/TobiasSchiwek' target='_blank'>@tobiasschiwek</a>
               </div>
             </li>
             </li>
@@ -148,7 +148,8 @@
           </ul>
         </p>
         <p><strong>The Investor: Rudy Garza</strong> As founder and managing general partner of G-51, Rudy focuses on the development of all portfolio companies, syndication partnerships and deal flow. <a href="http://www.g51.com/rudy-garza.html">Read more about Rudy:</a></p>
-        <p><strong>The Crazy Solo Founder: Mike Holp</strong> <a href="http://www.dwmcapp.com/">"Dude where is my car?"</a> with Mike Holp. Their value proposition is "Never lose your car again.</p>
+        <p><strong>The Crazy Solo Founder: Mike Holp</strong> <a href="http://www.dwmcapp.com/">"Dude where is my car?"</a> Their value proposition is "Never lose your car again.</p>
+        <p><strong>The FanCaptain: Tobias Schiwek</strong> <a href="http://www.fancaptain.com/">FanCaptain</a> The All-In-One Social Media Tool for the Music Industry. Optimize your social media workflows and manage your music fans in one place</p>        
         <h2>Round 2</h2>
         <p>
           <ul class='talks'>
