--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         </ul>
         <p>Hand-picked startups meet high-class investors in the most candid way: Questions never asked before reveal insights never given before. Who’s the perfect match for you?<br/>
         Join our event series that has already made dreams come true for so many founders and investors: Matchmaking with inspiring people in a creative and fun environment. An insane mixture of German efficiency and atypical German fun.</p>
+        <p>More information about the "Interactive Dating Game" and the whole program, feat. +Ken Doctor, +Cory Haik, +Ulrike Langer and other fab experts, visit <a href="www.sxsw-nrw.com">www.sxsw-nrw.com</a></p>
         <img width="380" alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-dating-game-7.jpg'>
         <img width="380" alt='Dating Game @ Interactive Cologne 2013' src='images/interactive-dating-game-2.jpg'>
       </section>
