--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
             </li>
             </li>
             <li>
-              <div class='name'>Startup</div>
-              <div class='avatar' style="background-image: url('images/startup.gif')"></div>
-              <div class='name'>Name</div>
+              <div class='name'>The CTO</div>
+              <div class='avatar' style="background-image: url('images/joergb.jpg')"></div>
+              <div class='name'>Joerg Bienert</div>
               <div class='handle'>
-                <a href='http://twitter.com/startup' target='_blank'>@startup</a>
+                <a href='http://twitter.com/ParStream' target='_blank'>@ParStream</a>
               </div>
             </li>
           </ul>
@@ -151,6 +151,7 @@
         <p><strong>The Investor: Rudy Garza</strong> As founder and managing general partner of G-51, Rudy focuses on the development of all portfolio companies, syndication partnerships and deal flow. <a href="http://www.g51.com/rudy-garza.html">Read more about Rudy:</a></p>
         <p><strong>The Crazy Solo Founder: Mike Holp</strong> <a href="http://www.dwmcapp.com/">"Dude where is my car?"</a> Their value proposition is "Never lose your car again.</p>
         <p><strong>The FanCaptain: Tobias Schiwek</strong> <a href="http://www.fancaptain.com/">FanCaptain</a> The All-In-One Social Media Tool for the Music Industry. Optimize your social media workflows and manage your music fans in one place</p>        
+        <p><strong>The CTO: Joerg Bienert</strong><a href="https://www.parstream.com/">ParStream</a>, the fastest real-time database for Big Data Analytics provides immediate insights from massive, continuously growing amounts of data. Based onunique, patented algorithms, ParStream, “the #1 Big Data Company (CIO.com)” enables new types of applications and business models in ecommerce, telco, finance, retail and many other industries</p>
         <h2>Round 2</h2>
         <p>
           <ul class='talks'>
