added lori cheek

--- a/index.html
+++ b/index.html
@@ -156,23 +156,41 @@
         <p>
           <ul class='talks'>
             <li>
-              <div class='name'>An awesome investor</div>
+              <div class='name'>The Investor</div>
               <div class='avatar' style="background-image: url('images/investor.gif')"></div>
+              <div class='name'>tba</div>
+              <div class='handle'>
+                <a href='http://twitter.com/anawesomeinvestor' target='_blank'>@anawesomeinvestor</a>
+              </div>
+            </li>
+            <li>
+              <div class='name'>The Digital Dating Expert</div>
+              <div class='avatar' style="background-image: url('images/lori.jpg')"></div>
+              <div class='name'>Lori Cheek</div>
+              <div class='handle'>
+                <a href='http://twitter.com/loricheeknyc' target='_blank'>@loricheeknyc</a>
+              </div>
             </li>
             <li>
               <div class='name'>Startup</div>
               <div class='avatar' style="background-image: url('images/startup.gif')"></div>
+              <div class='name'>tba</div>
+              <div class='handle'>
+                <a href='http://twitter.com/anawesomestartup' target='_blank'>@anawesomestartup</a>
+              </div>
             </li>
             <li>
               <div class='name'>Startup</div>
               <div class='avatar' style="background-image: url('images/startup.gif')"></div>
-            </li>
-            <li>
-              <div class='name'>Startup</div>
-              <div class='avatar' style="background-image: url('images/startup.gif')"></div>
+              <div class='name'>tba</div>
+              <div class='handle'>
+                <a href='http://twitter.com/anawesomestartup' target='_blank'>@anawesomestartup</a>
+              </div>
             </li>
           </ul>
         </p>
+        <p><strong>The Investor: unknown</strong></p>
+        <p><strong>The Digital Dating Expert: Lori Cheek</strong>LoriArchitect turned Entrepreneur, Founder and CEO of <a href="cheekd.com">Cheekd.com</a> -- the reverse engineered dating site coined by the New York Times as "the next generation of online dating." Lori, recently listed on the American Express Open Forum as "The Digital Dating Disruptor" and "One of the Top 10 CEOs to Watch in 2013," was just featured on ABC's Shark Tank pitching her million dollar idea, Cheek'd, which makes introducing yourself to an intriguing stranger less intimidating by combining the charm of witty, old school calling cards with the power of the Internet.</p>
         <div class="center">You're a startup or investor? Join the dating game on stage!<br/>
         <script type="text/javascript">var submitted=false;</script>
         <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"
