added ids for the rounds

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       </section>
       <section class='talks' id='candidates'>
         <div class='dottedline'><h1>Candidates</h1></div>
-        <h2>Round 1</h2>
+        <h2 id="round1">Round 1</h2>
         <p>
           <ul class='talks'>
             <li>
@@ -152,7 +152,7 @@
         <p><strong>The Crazy Solo Founder: Mike Holp</strong> <a href="http://www.dwmcapp.com/">"Dude where is my car?"</a> Their value proposition is "Never lose your car again.</p>
         <p><strong>The FanCaptain: Tobias Schiwek</strong> <a href="http://www.fancaptain.com/">FanCaptain</a> The All-In-One Social Media Tool for the Music Industry. Optimize your social media workflows and manage your music fans in one place</p>        
         <p><strong>The CTO: Joerg Bienert</strong><a href="https://www.parstream.com/">ParStream</a>, the fastest real-time database for Big Data Analytics provides immediate insights from massive, continuously growing amounts of data. Based onunique, patented algorithms, ParStream, “the #1 Big Data Company (CIO.com)” enables new types of applications and business models in ecommerce, telco, finance, retail and many other industries</p>
-        <h2>Round 2</h2>
+        <h2 id="round2">Round 2</h2>
         <p>
           <ul class='talks'>
             <li>
